[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/PopupMenu/PopupMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Main.tres" type="Theme" id=2]

[node name="PopupMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -285.0
margin_top = -340.5
margin_right = 285.0
margin_bottom = 340.5
theme = ExtResource( 2 )
custom_constants/separation = 20

[node name="Quit" type="Button" parent="Menu"]
margin_right = 570.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="Restart" type="Button" parent="Menu"]
margin_top = 175.0
margin_right = 570.0
margin_bottom = 330.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="Settings" type="Button" parent="Menu"]
margin_top = 350.0
margin_right = 570.0
margin_bottom = 505.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"

[node name="Back" type="Button" parent="Menu"]
margin_top = 525.0
margin_right = 570.0
margin_bottom = 681.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Back"
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Back" to="." method="_on_Back_pressed"]
